infrastructure/kubernetes/overlays/local/airflow/airflow-scheduler-patch.yaml
apiVersion: apps/v1
kind: Deployment        
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  template:
    spec:
      containers:
        - name: scheduler
